--- a/src/styles/components/slider-style.css
+++ b/src/styles/components/slider-style.css
@@ -80,6 +80,8 @@
 				width: 150px;
 				top: 90%;
 				left: -15%;
+				height: 200px;
+				object-fit: contain;
 			}
 		}
 	}
@@ -125,6 +127,9 @@
 			position: absolute;
 			left: -200px;
 			padding: 140px 80px;
+			@media (max-width: 768px) {
+				position: static;
+			}
 		}
 	}
 }
